# opencv2term

./: .gitignore  CMakeLists.txt  COLOR-IMPLEMENTATION-STATUS.md  README.md  main.cpp  raspberry-pi-setup.md
include/: AsciiPalette.h  AsciiRenderer.h  CameraProcessor.h  DisplayManager.h  ImageProcessor.h  MenuManager.h  VideoProcessor.h
src/: AsciiPalette.cpp  AsciiRenderer.cpp  CameraProcessor.cpp  DisplayManager.cpp  ImageProcessor.cpp  MenuManager.cpp  VideoProcessor.cpp  main.cpp
